    Optimized code related to Fishing
    Added a new command 'mcmmoreload' to reload config values
    Added new locale string 'Commands.Reload.Start'
    Added new locale string 'Commands.Reload.Finished'
    Added new permission 'mcmmo.commands.reload'
    Lily pads were removed from the Alchemy Ingredient list as they are unused
    Admins will now be notified if a player trips over-fishing exploit detection 3+ times in a row (Locale: "Fishing.OverFishingDetected")
        Note: Admins are players who are an operator or have adminchat permission.

    Bug Fixes
    Fixed a bug where Blast Minings cooldown was not being displayed correctly
    Fixed a bug where players who started at level 1 would not be purged from the DB for being "powerless"
    Fixed a potential bug where players could be awarded XP for cancelled tame events
    Fixed a bug where party size limits were only counting online players

    Permission Node Changes
    Removed "mcmmo.motd" because it makes no sense to have this as a player permission when its a config option
    Removed "mcmmo.showversion" because this one also makes no sense
    Removed "mcmmo.perks.xp.all" and "mcmmo.perks.xp.*" because they make no sense

    Config Changes

    All event related settings will now be in the event config

    All author ad-type (donations, urls, etc) message config options will now be found in "author_support_advertisements.conf"
    Added config option for showing author paypal info in /mcmmo (previously this was tied to the motd setting)
    Added config option for showing author patreon links in various commands

    Automated backup config options will now be found in "automated_backups.conf"
    "Last_24_Hours", "Daily_Last_Week", "Weekly_Past_Months" have been replaced with "Old-File-Age-Limit-In-Days" which does the same thing